AgGridReact  - import-bulk-table.tsx - AgGridReact styling to have more space for the header row: gridOptions={{headerHeight: 80 }}

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,3 +86,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+/* AgGridReact styling to have more space for the header row - not needed */
+
+/* .ag-theme-alpine .ag-header-cell-label {
+  padding-top: 10px !important;
+  padding-bottom: 10px !important;
+} */
